--- a/start.sh.example
+++ b/start.sh.example
@@ -5,4 +5,5 @@ pbgui=~/software/pbgui          #path to pbgui installation
 source ${venv}/bin/activate
 cd ${pbgui}
 python PBRun.py &
+python PBRemote.py &
 python PBStat.py &
