--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,14 @@
+name: test
 on:
-  commit_comment:
-  - name: Notify the commit on Telegram
-    uses: EverythingSuckz/github-telegram-notify@main
-    with:
-      bot_token: '${{ secrets.BOT_TOKEN }}'
-      chat_id: '${{ secrets.CHAT_ID }}'
-      topic_id: '${{ secrets.TOPIC_ID }}'
+  push:
+
+jobs:
+  notification:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Notify the commit on Telegram
+      uses: EverythingSuckz/github-telegram-notify@main
+      with:
+        bot_token: '${{ secrets.BOT_TOKEN }}'
+        chat_id: '${{ secrets.CHAT_ID }}'
+        topic_id: '${{ secrets.TOPIC_ID }}'
