--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit==1.37.0
+streamlit==1.38.0
 streamlit-scrollable-textbox==0.0.3
 streamlit-autorefresh==1.0.1
 bokeh==2.4.3
 psutil==5.9.4
 plotly==5.20.0
+contourpy==1.1.1
+numpy==1.26.4
+hjson==3.1.0
