--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ bokeh==2.4.3
 psutil==5.9.4
 plotly==5.20.0
 contourpy==1.1.1
-numpy==1.26.4
+numpy==1.24.4
+numba==0.59.1
 hjson==3.1.0
+ccxt==4.3.98
