--- a/pbgui.ini.example
+++ b/pbgui.ini.example
@@ -6,7 +6,7 @@ pb7dir = /home/<username>/software/pb7
 pb7venv = /home/<username>/software/venv_pb7/bin/python
 
 [pbremote]
-bucket = <bucket_name:>
+bucket = <bucket_name>:
 
 [coinmarketcap]
 api_key = <api_key
