--- a/pbgui.ini.example
+++ b/pbgui.ini.example
@@ -9,7 +9,7 @@ pb7venv = /home/<username>/software/venv_pb7/bin/python
 bucket = <bucket_name>:
 
 [coinmarketcap]
-api_key = <api_key>:
+api_key = <api_key>
 fetch_limit = 1000
 fetch_interval = 4
 
