--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.38.0
+streamlit==1.39.0
 streamlit-scrollable-textbox==0.0.3
 streamlit-autorefresh==1.0.1
 bokeh==2.4.3
@@ -9,3 +9,6 @@ numpy==1.24.4
 numba==0.59.1
 hjson==3.1.0
 ccxt==4.3.98
+ansible==8.7.0
+ansible-runner==2.4.0
+passlib==1.7.4
