--- a/vps-setup.yml
+++ b/vps-setup.yml
@@ -63,6 +63,7 @@
         cache_valid_time: 3600
         autoremove: yes
         autoclean: yes
+        clean: yes
         force_apt_get: yes
       become: yes
       register: update_result
@@ -141,6 +142,7 @@
         - rclone
         - rustc
         - cargo
+        clean: yes
       become: yes
 
     - name: clone pbgui repository
@@ -168,14 +170,14 @@
       pip:
         virtualenv_command: python3.10 -m venv
         virtualenv: "{{ install_dir }}/venv_pbgui"
-        requirements: "{{ install_dir }}/pbgui/requirements.txt"
+        requirements: "{{ install_dir }}/pbgui/requirements_vps.txt"
         extra_args: --upgrade pip
 
     - name: create python3.10 venv for pb6
       pip:
         virtualenv_command: python3.10 -m venv
         virtualenv: "{{ install_dir }}/venv_pb6"
-        requirements: "{{ install_dir }}/pb6/requirements.txt"
+        requirements: "{{ install_dir }}/pb6/requirements_liveonly.txt"
         extra_args: --upgrade pip
 
     - name: create python3.10 venv for pb7
