--- a/vps-init.yml
+++ b/vps-init.yml
@@ -25,10 +25,15 @@
         name: "{{ hostname }}"
         state: absent
 
+    - name: check if ssh-key exists
+      debug:
+        msg: "{{ lookup('file', lookup('env', 'HOME') + '/.ssh/id_rsa.pub') }}"
+      register: ssh_key_exists
+
     - name: create ssh-key on localhost if not exists
       openssh_keypair:
         path: "{{ lookup('env', 'HOME') + '/.ssh/id_rsa' }}"
-      when: not lookup('file', "{{ lookup('env', 'HOME') }}/.ssh/id_rsa.pub")
+      when: not ssh_key_exists
 
 - hosts: "{{ hostname }}"
   remote_user: root
