--- a/vps-update-pb.yml
+++ b/vps-update-pb.yml
@@ -95,9 +95,44 @@
         chdir: "{{ install_dir }}/pbgui"
       listen: "restart pb6"
 
+    - name: Get files in a folder
+      find:
+        paths: "{{ install_dir }}/pb7/passivbot-rust/src"
+      register: found_files
+      listen: "restart pb7"
+
+    - name: Get latest src file
+      set_fact:
+        latest_file: "{{ found_files.files | sort(attribute='mtime',reverse=true) | first }}"
+      listen: "restart pb7"
+    
+    - name: get mtime of libpassivbot_rust.so
+      stat:
+        path: "{{ install_dir }}/pb7/passivbot-rust/target/release/libpassivbot_rust.so"
+      register: libpassivbot
+      listen: "restart pb7"
+
+    - name: Check if rust build is required
+      set_fact:
+        rust_build: "{{ libpassivbot.stat.mtime > latest_file.mtime }}"
+      when: libpassivbot.stat.exists == true
+      listen: "restart pb7"
+
+    - name: Build passivbot-rust with maturin
+      shell: |
+        source "{{ install_dir }}/venv_pb7/bin/activate"
+        maturin develop --release
+      args:
+        chdir: "{{ install_dir }}/pb7/passivbot-rust"
+        executable: /bin/bash
+      register: maturin_result
+      when: libpassivbot.stat.exists == false or rust_build == false
+      listen: "restart pb7"
+
     - name: kill all pb7 processes
       shell: "kill $(ps -ef | grep {{ install_dir }}/pb7/src/main.py | grep -v grep | awk '{print $2}')"
       listen: "restart pb7"
+      ignore_errors: yes
     
     - name: Make sure PBRun ist running
       shell: |
