--- a/master-update-pb.yml
+++ b/master-update-pb.yml
@@ -34,7 +34,7 @@
         version: main
         update: yes
         force: yes
-      when: pbgdir is defined
+      when: pbgdir != ""
       register: pbgui_repo
       notify: restart pbgui
 
@@ -50,7 +50,7 @@
         version: v6.1.4b_latest_v6
         update: yes
         force: yes
-      when: pb6dir is defined
+      when: pb6dir != ""
       register: pb6_repo
       notify: restart pb6
 
@@ -66,7 +66,7 @@
         version: master
         update: yes
         force: yes
-      when: pb7dir is defined
+      when: pb7dir != ""
       register: pb7_repo
       notify: restart pb7
 
