--- a/vps-update-pb.yml
+++ b/vps-update-pb.yml
@@ -76,7 +76,7 @@
     - name: Install pbgui requirements
       pip:
         virtualenv: "{{ install_dir }}/venv_pbgui"
-        requirements: "{{ install_dir }}/pbgui/requirements.txt"
+        requirements: "{{ install_dir }}/pbgui/requirements_vps.txt"
         extra_args: --upgrade pip
       listen: "restart pbgui"
 
@@ -92,7 +92,7 @@
     - name: Install pb6 requirements
       pip:
         virtualenv: "{{ install_dir }}/venv_pb6"
-        requirements: "{{ install_dir }}/pb6/requirements.txt"
+        requirements: "{{ install_dir }}/pb6/requirements_liveonly.txt"
         extra_args: --upgrade pip
       listen: "restart pb6"
 
