--- a/master-update-pbonly.yml
+++ b/master-update-pbonly.yml
@@ -28,6 +28,16 @@
         var: ansible_facts
       tags: debug,never
 
+    - name: Make sure rustup is installed
+      apt:
+        pkg:
+        - rustup
+        clean: yes
+      become: yes
+
+    - name: Update rust
+      command: rustup update stable
+
     - name: clone passivbot repository for pb6
       git:
         repo: https://github.com/enarjord/passivbot.git
