--- a/vps-update-pb.yml
+++ b/vps-update-pb.yml
@@ -23,6 +23,16 @@
         var: ansible_facts
       tags: debug,never
 
+    - name: Make sure rustup is installed
+      apt:
+        pkg:
+        - rustup
+        clean: yes
+      become: yes
+
+    - name: Update rust
+      command: rustup update stable
+
     - name: get install_dir
       set_fact:
         install_dir: "{{ ansible_env.HOME + '/software' }}"
@@ -62,9 +72,6 @@
       debug:
         var: pb6_repo
       tags: debug,never
-
-    - name: Update rust
-      command: rustup update stable
 
     - name: clone passivbot repository for pb7
       git:
