--- a/vps-update-coindata.yml
+++ b/vps-update-coindata.yml
@@ -5,7 +5,7 @@
 # 2. Restart pbgui service
 
 - hosts: "{{ hostname }}"
-  gather_facts: "{{ debug }}"
+  gather_facts: yes
 
   vars:
     # ansible_ssh_pass: "{{ user_pw }}"
