--- a/master-install-rustup.yml
+++ b/master-install-rustup.yml
@@ -27,8 +27,11 @@
         clean: yes
       become: yes
 
+    - name: remove stable toolchain if exists
+      command: rustup toolchain uninstall stable 1.78.0
+
     - name: Update rust
-      command: rustup update 1.78.0
+      command: rustup update 1.90.0
       register: update_rust
 
     - name: print update_rust
