add tasks to display ufw status after disabling firewall

--- a/vps-update-firewall.yml
+++ b/vps-update-firewall.yml
@@ -67,3 +67,12 @@
         state: disabled
       become: yes
       when: not firewall
+
+    - name: ufw status verbose
+      command: ufw status verbose
+      become: yes
+      register: ufw_status
+  
+    - name: display ufw_status
+      debug:
+        var: ufw_status.stdout_lines
