fix: Only check tracked files for uncommitted changes in branch switch
Change from 'git status --porcelain' to 'git diff' commands to ignore
untracked files (??). This allows branch switching even when untracked
test files or documentation exists in the working directory.

--- a/master-switch-pbgui-branch.yml
+++ b/master-switch-pbgui-branch.yml
@@ -30,8 +30,8 @@
       when: pbgdir != ""
       changed_when: false
 
-    - name: Check for uncommitted changes
-      command: git status --porcelain
+    - name: Check for uncommitted changes (tracked files only)
+      shell: git diff --name-only && git diff --cached --name-only
       args:
         chdir: "{{ pbgdir }}"
       register: git_status
