feat: Add complete branch management system with commit history
- Add VPS branch switching functionality
- Display full commit messages with tooltips
- Implement dynamic commit loading (50 initial, +50, All)
- Add branch-aware comparison in all views
- Move Local Branch Management above table (matches VPS layout)
- Fix commit parsing bug (strip before split)
- Implement side-by-side layout for status and button
- Complete UI consistency between Local and VPS sections

--- a/master-update-pb.yml
+++ b/master-update-pb.yml
@@ -39,11 +39,19 @@
         var: update_rust
       tags: debug,never
 
+    - name: Get current pbgui branch
+      command: git rev-parse --abbrev-ref HEAD
+      args:
+        chdir: "{{ pbgdir }}"
+      register: current_pbgui_branch
+      changed_when: false
+      when: pbgdir != ""
+
     - name: clone pbgui repository
       git:
         repo: https://github.com/msei99/pbgui.git
         dest: "{{ pbgdir }}"
-        version: main
+        version: "{{ current_pbgui_branch.stdout }}"
         update: yes
         force: yes
       when: pbgdir != ""
