Add complete PB7 branch management with smart updates
Features:
- PB7 branch management for Master and VPS (parallel to PBGui)
- Git fetch integration in all branch loading functions
- Remote branch prioritization over local branches
- Branch filtering: exclude old v6/v5/v4/v3/v2/v1/v0 branches from PB7
- Branch sorting by update date (newest first) for both PBGui and PB7
- Behind-origin detection with commit count display
- Dynamic button labels: Update/Switch Branch/Switch Commit
- Ansible playbooks for PB7 branch switching (master + vps)
- Branch preservation in all update playbooks

Technical:
- Added timestamp to git log format (%at) for date-based filtering/sorting
- Two-pass branch loading: collect remotes first, skip locals if remote exists
- Behind-origin check triggers on both HEAD and Current commit selection
- Button disabled only when truly on target (same branch+commit, not behind)

--- a/vps-update-pb.yml
+++ b/vps-update-pb.yml
@@ -82,11 +82,18 @@
         var: pb6_repo
       tags: debug,never
 
+    - name: Get current pb7 branch
+      command: git rev-parse --abbrev-ref HEAD
+      args:
+        chdir: "{{ install_dir }}/pb7"
+      register: current_pb7_branch
+      changed_when: false
+
     - name: clone passivbot repository for pb7
       git:
         repo: https://github.com/enarjord/passivbot.git
         dest: "{{ install_dir }}/pb7"
-        version: master
+        version: "{{ current_pb7_branch.stdout }}"
         update: yes
         force: yes
       register: pb7_repo
