--- a/master-update-pb.yml
+++ b/master-update-pb.yml
@@ -79,11 +79,19 @@
         var: pb6_repo
       tags: debug,never
 
+    - name: Get current pb7 branch
+      command: git rev-parse --abbrev-ref HEAD
+      args:
+        chdir: "{{ pb7dir }}"
+      register: current_pb7_branch
+      changed_when: false
+      when: pb7dir != ""
+
     - name: clone passivbot repository for pb7
       git:
         repo: https://github.com/enarjord/passivbot.git
         dest: "{{ pb7dir }}"
-        version: master
+        version: "{{ current_pb7_branch.stdout }}"
         update: yes
         force: yes
       when: pb7dir != ""
