Refactor: Convert all branch management expanders to @st.fragment and remove obsolete anchors
- Implemented @st.fragment for all 4 branch management expanders (Master/VPS PBGui/PB7)
- Changed all Reload/+50/All buttons to use st.rerun(scope='fragment') for stable expanders
- Removed unnecessary st.empty() anchors - no longer needed with fragments
- Removed anchor.markdown() calls and 'with anchor: pass' constructs
- Kept full-page st.rerun() for Switch/Update buttons (intentional UI refresh)
- Result: ~20 lines of obsolete code removed, cleaner implementation

--- a/vps-switch-pb7-branch.yml
+++ b/vps-switch-pb7-branch.yml
@@ -9,7 +9,7 @@
 # 6. Restart pbgui services
 
 - hosts: "{{ hostname }}"
-  gather_facts: "{{ debug }}"
+  gather_facts: yes
 
   vars:
     user: "{{ user }}"
@@ -107,6 +107,7 @@
 
     - name: Make sure PBRun ist running
       shell: |
+        source "{{ install_dir }}/venv_pbgui/bin/activate"
         python "{{ pbgdir }}/starter.py" -s PBRun
       args:
         executable: /bin/bash
